# PersonaTalk_V2

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  MODEL_SERVICE_GUIDE.md  README.md  README_DOCKER.md  docker-compose.yml  pyproject.toml  pytest.ini  start.sh  stop.sh
backend/src/: config.py  main.py
backend/src/api/: deps.py
backend/src/api/api_v1/: __init__.py  chat.py  history_session.py
backend/src/crud/: __init__.py  base.py  crud_history_chat.py  crud_history_session.py
backend/src/model/: base.py  history_chat.py  history_session.py
backend/src/model_server/: README.md  __init__.py  base.py  deps.py  example.py  factory.py  openai_service.py  tts_service.py
backend/src/test/: test_deps.py
deploy/: README.md  README_START.md  docker-compose.yml  start.sh
deploy/db/: init.sql
deploy/nginx/: nginx.conf
docs/: PersonTalk_PRD_.docx  V1_需求优先级与评分.pages  ai 角色扮演网页—用户画像 & 用户旅程地图（v.docx  requirement_doc_en.md  requirement_doc_zh.md  zle的快速会议-AI纪要.txt  会议纪要-AI接口问题排查.docx  竞品分析报告_AI角色扮演语音网页.docx
web/: README.md  index.html
web/personaltalk/: .dockerignore  Dockerfile  README.md  index.html  jsconfig.json  package.json  vite.config.js
web/personaltalk/src/: App.vue  main.js
web/personaltalk/src/api/: chatapi.js
web/personaltalk/src/assets/: main.css
web/personaltalk/src/components/: AudioWave.vue  ChatBox.vue  CusButton.vue  CusInput.vue  CustomCharacterModal.vue  HistorySession.vue  Loading.vue  Message.vue  MsgLoadingAnimation.vue  PersonalCard.vue  PromptImport.vue  SpeechAPI.vue  VoiceChatAudioPlayer.vue
(+7 files in other folders)
